# python-template

./: .flake8  .gitignore  .pylintrc  LICENSE  Pipfile  README.md  azure-pipelines.yml  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.cfg  tox.ini
.azure-pipelines/jobs/: build.yml  package.yml  publish.yml  test.yml  tox.yml
.devcontainer/: Dockerfile  devcontainer.json  onCreate.sh
.github/workflows/: build.yaml
src/boilerplate/: __init__.py  __main__.py  cli.py  hello.py
tests/: test_hello.py
tests/unit/: test_hello.py
