[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = """
--cov boilerplate --cov-report term-missing --cov-report xml --cov-report html 
--doctest-modules 
--junitxml=junit/test-results.xml
--verbose
"""
norecursedirs = [
  "dist",
  "build"
]
testpaths = "tests"
