[metadata]
name = boilerplate
description = Some scaffolding and structure to help bootstrap Python projects on Azure
author = Noel Bundick
author_email = noelbundick@gmail.com
license = MIT
url = https://github.com/noelbundick/azure-python-boilerplate
platforms = any
long_description = file:README.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers = 
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development

[options]
python_requires = >= 3.5
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =src
setup_requires =
    setuptools_scm

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
dev =
    black; python_version >= "3.6"
    flake8
    pip
    pylint
    pytest
    pytest-azurepipelines
    pytest-cov
    setuptools_scm
    tox
    wheel

[options.entry_points]
console_scripts =
    boilerplate = boilerplate.cli:main

[aliases]
build = bdist_wheel