[metadata]
name = boilerplate
description = Some scaffolding and structure to help bootstrap Python projects
author = Noel Bundick
author_email = noelbundick@gmail.com
license = MIT
url = https://github.com/noelbundick/python-template
platforms = any
long_description = file:README.md
long_description_content_type = text/markdown
license_files = LICENSE
classifiers = 
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development

[options]
python_requires = >= 3.10
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    pyyaml

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
dev =
    build
    flake8
    pylint
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    boilerplate = boilerplate.cli:main
